fix: Update admin password hash and CORS config for Swagger UI